--- a/index.html
+++ b/index.html
@@ -3,12 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Links-->
     <link rel="icon" href="./favicons/favicon-16x16.png">
     <link rel="stylesheet" href="./CSS/style.css">
+
+    <!--JS-->
+    <script defer src="./JS/script.js"></script>
+
     <title>Pokédex</title>
 </head>
 <body>
     <main>
+        <img src="" alt="pokemon" class="pokemon_image">
+
+        <h1 class="pokemon_data">
+            <span class="pokemon_number"></span> - 
+            <span class="pokemon_name"></span>
+        </h1>
+
+        <form class="form">
+            <input 
+            type="search"
+            class="input_search"
+            placeholder="name or number"
+            required
+            />
+        </form>
+
+        <div class="buttons">
+            <button class="button btn-prev">Prev &lt; </button>
+            <button class="button btn-next">Next &gt; </button>
+        </div>
+
         <img src="./img/pokedex.png" alt="pokedex" class="pokedex">
     </main>
 </body>
