--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main>
-        <img src="" alt="pokemon" class="pokemon_image">
+        <img src="#" alt="pokemon" class="pokemon_image">
 
         <h1 class="pokemon_data">
             <span class="pokemon_number"></span> - 
